--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "app.js",
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^1.28.0",
     "cron": "^1.8.2",
-    "nodemailer": "^6.7.1",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "nodemailer": "^6.7.1"
   },
   "devDependencies": {},
   "scripts": {
