--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.28.0",
     "cron": "^1.8.2",
+    "dotenv": "^10.0.0",
     "node-fetch": "^3.1.0",
     "nodemailer": "^6.7.1"
   },
