--- a/floor-track/package.json
+++ b/floor-track/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@mantine/core": "^3.2.2",
     "@mantine/hooks": "^3.2.2",
+    "@supabase/supabase-js": "^1.28.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
